--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,39 @@
     <meta charset="UTF-8">
     <title>SACDEV Login</title>
     <style>
+        .modal {
+            display: none; 
+            position: fixed; 
+            z-index: 1; 
+            left: 0;
+            top: 0;
+            width: 100%; 
+            height: 100%; 
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 300px;
+            text-align: center;
+        }
+        .close {
+            color: #aaa;
+            font-size: 28px;
+            font-weight: bold;
+            position: absolute;
+            top: 10px;
+            right: 20px;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
         body {
             margin: 0;
             padding: 0;
@@ -50,6 +83,7 @@
             border-radius: 10px;
             background-color: #596080;
             color: #fff;
+            box-sizing: border-box;
         }
 
         input[type="submit"] {
@@ -84,5 +118,26 @@
             <input type="submit" value="Login">
         </form>
     </div>
+    <!-- Modal -->
+    <div id="errorModal" class="modal" onclick="closeModal()">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <p id="errorMessage"></p>
+        </div>
+    </div>
+
+    <!-- Show error popup if error message exists -->
+    <script>
+        {% if error %}
+            // Display the error modal with the message
+            document.getElementById("errorMessage").textContent = "{{ error }}";
+            document.getElementById("errorModal").style.display = "block";
+        {% endif %}
+
+        // Function to close the modal
+        function closeModal() {
+            document.getElementById("errorModal").style.display = "none";
+        }
+    </script>
 </body>
 </html>
