student_orgs fixed and new designs

--- a/templates/organization_view.html
+++ b/templates/organization_view.html
@@ -39,7 +39,7 @@
   }
   
   ul li {
-    background: #00ff00;
+    background:rgba(0, 183, 255, 0.97);
     border: 1px solid #ddd;
     padding: 10px 15px;
     margin-bottom: 8px;
@@ -48,7 +48,7 @@
   }
   
   ul li:hover {
-    background-color: #ff00ae;
+    background-color:rgba(0, 68, 255, 0.99);
   }
   
   a {
