--- a/templates/sacdev_dashboard.html
+++ b/templates/sacdev_dashboard.html
@@ -51,7 +51,7 @@
 
     .btn-view-students {
         display: inline-block;
-        background-color: #1abc9c;
+        background-color: #3498db;
         color: white;
         padding: 10px 18px;
         border-radius: 6px;
@@ -63,7 +63,7 @@
     }
 
     .btn-view-students:hover {
-        background-color: #16a085;
+        background-color: #2471a3;
     }
 
     .org-list {
