--- a/templates/organization_view.html
+++ b/templates/organization_view.html
@@ -11,17 +11,17 @@
     background-color: #f9f9f9;
     margin: 0;
     padding: 0 20px;
-    color: #000000;
+    color:rgb(255, 255, 255);
   }
   
   h2 {
-    color: #000000;
+    color:rgb(255, 255, 255);
     margin-top: 30px;
     font-size: 2em;
   }
   
   h3 {
-    color: #000000;
+    color:rgb(255, 255, 255);
     margin-top: 20px;
     border-bottom: 2px solid #ddd;
     padding-bottom: 5px;
