--- a/templates/sacdev_dashboard.html
+++ b/templates/sacdev_dashboard.html
@@ -87,6 +87,7 @@
         margin-bottom: 12px;
         border: none;
         border-radius: 5px;
+        box-sizing: border-box;
     }
 
     .submit-btn {
